-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Fix Version/s: 0.4.8
-
Component/s: Build System
-
Labels:None
reactos/dll/win32/setupapi/driver.c
|
568 #if WIN32_WINNT < 0x0600
|
|
reactos/dll/win32/shell32/wine/shellpath.c
|
648 #if WIN32_WINNT >= 0x0600
|
1045 #if WIN32_WINNT >= 0x0600
|
2274 #if WIN32_WINNT >= 0x0600
|
|
reactos/drivers/filesystems/btrfs/fsctl.c
|
2448 #if WIN32_WINNT >= 0x0600
|
|
reactos/sdk/include/psdk/reason.h
|
46 #endif /* WIN32_WINNT >= 0x0501 */
|
|
reactos/sdk/include/psdk/sdkddkver.h
|
131 /* Select Default WIN32_WINNT Value */
|
|
reactos/sdk/include/reactos/idl/pnp.idl
|
928 cpp_quote("#endif /* WIN32_WINNT >= 0x0501 */")
|
|
reactos/sdk/include/xdk/winnt_old.h
|
3808 #if 1 /* (WIN32_WINNT >= 0x0500) */
|
3902 #endif /* (WIN32_WINNT >= 0x0501) */
|
Ftr, noticed in CORE-12527
- relates to
-
CORE-12527 LiveCD: Create missing profile subdirectories
-
- Resolved
-