[INCLUDE] Fix a WIN32_WINNT => _WIN32_WINNT typo in some comments. Spotted by Serge Gautherie. CORE-12580

svn path=/trunk/; revision=73466